[gd_scene load_steps=7 format=2]

[ext_resource path="res://GFX/Simple Turret1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Turret.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Laser.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=3]
radius = 47.5899

[sub_resource type="CircleShape2D" id=1]
radius = 49.609

[sub_resource type="CircleShape2D" id=2]
radius = 80.8372

[node name="Turret" type="StaticBody2D"]
z_index = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
laser_scene = ExtResource( 3 )
rotate_speed = 0.4
debug_drawraycast = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -35.9655 )
texture = ExtResource( 1 )

[node name="PickupArea" type="Area2D" parent="."]
priority = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea"]
shape = SubResource( 1 )

[node name="RotateArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RotateArea"]
shape = SubResource( 2 )

[node name="Laserstart" type="Node2D" parent="."]
position = Vector2( 0, -72 )

[connection signal="mouse_entered" from="PickupArea" to="." method="_on_PickupArea_mouse_entered"]
[connection signal="mouse_exited" from="PickupArea" to="." method="_on_PickupArea_mouse_exited"]
[connection signal="mouse_entered" from="RotateArea" to="." method="_on_RotateArea_mouse_entered"]
[connection signal="mouse_exited" from="RotateArea" to="." method="_on_RotateArea_mouse_exited"]
